new file:   MYBfrontend/public/burgerBackground2.png 	new file:   MYBfrontend/public/cutlet.png 	new file:   MYBfrontend/public/mayo.png 	modified:   MYBfrontend/src/components/AnimatedPage/AnimatedPage.tsx 	modified:   MYBfrontend/src/components/App.tsx 	modified:   MYBfrontend/src/components/Footer/Footer.tsx 	modified:   MYBfrontend/src/components/Footer/Footere.module.scss 	modified:   MYBfrontend/src/components/Header/AvatarDropDown.tsx 	modified:   MYBfrontend/src/components/Header/CallMeBack.tsx 	modified:   MYBfrontend/src/components/Header/Header.module.scss 	modified:   MYBfrontend/src/components/Header/Header.tsx 	new file:   MYBfrontend/src/components/Header/HeaderElementInterface.tsx 	new file:   MYBfrontend/src/components/Header/HeaderLogo.tsx 	new file:   MYBfrontend/src/components/Header/HeaderTrigger.tsx 	modified:   MYBfrontend/src/components/Header/NavLinks.tsx 	new file:   MYBfrontend/src/components/MYBname/MYBname.module.scss 	new file:   MYBfrontend/src/components/MYBname/MYBname.tsx 	new file:   MYBfrontend/src/components/svgComponents/BurgerBackgroundSVG.tsx 	new file:   MYBfrontend/src/components/svgComponents/CounterIcocs.tsx 	modified:   MYBfrontend/src/components/svgComponents/PaymentLogos.tsx 	new file:   MYBfrontend/src/components/svgComponents/SummaryIcons.tsx 	modified:   MYBfrontend/src/pages/LandingPage/LandingPage.module.scss 	modified:   MYBfrontend/src/pages/LandingPage/LandingPage.tsx 	modified:   MYBfrontend/src/pages/Layout/Layout.module.scss 	new file:   MYBfrontend/src/pages/MainPage/Burger.tsx 	new file:   MYBfrontend/src/pages/MainPage/Ingredients/Ingredient.tsx 	new file:   MYBfrontend/src/pages/MainPage/Ingredients/Ingredients.tsx 	modified:   MYBfrontend/src/pages/MainPage/MainPage.module.scss 	modified:   MYBfrontend/src/pages/MainPage/MainPage.tsx 	new file:   MYBfrontend/src/pages/MainPage/Summary/Summary.tsx 	new file:   MYBfrontend/src/pages/MainPage/Summary/SummaryCounter.tsx 	modified:   MYBfrontend/src/scss/inde

--- a/MYBfrontend/src/components/Footer/Footere.module.scss
+++ b/MYBfrontend/src/components/Footer/Footere.module.scss
@@ -4,6 +4,7 @@
 .footerWrap {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     gap: 1rem;
     align-self: stretch;
     @include mixins.fontStyle(colors.$primary-muted, 0.75rem, normal, 400, normal);
@@ -30,38 +31,7 @@
     .footerRight {
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
         gap: 0.5rem;
     }
-}
-
-@mixin paymentBase ($background) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 2.1875rem;
-    height: 1.5rem;
-    flex-shrink: 0;
-    border-radius: 0.25rem;
-    background: $background;
-}
-
-.base {
-    width: 2.1875rem;
-    height: 1.5rem;
-}
-
-.mastercardBase {
-    @include paymentBase(#FFF4EE);
-}
-
-.googlePayBase {
-    @include paymentBase(#F1F6FF);
-}
-
-.payPalBase {
-    @include paymentBase(#F3FBFF);
-}
-
-.etheriumBase {
-    @include paymentBase(#F1F4FF);
 }
