--- a/MYBfrontend/src/components/Header/Header.module.scss
+++ b/MYBfrontend/src/components/Header/Header.module.scss
@@ -1,25 +1,166 @@
 @use '../../scss/_colors.scss' as colors;
 @use '../../scss/mixins.module.scss' as mixins;
 
-.headerWrap {
-    display: flex;
-    align-items: center;
-    gap: 5rem;
-    flex: 1 0 0;
+
+@media (max-width: 1200px) {
+    .headerWrap {
+        position: absolute;
+        display: grid;
+        grid-template-columns: repeat(3, auto);
+        grid-template-rows: 0.1fr 0.1fr auto auto;
+        grid-template-areas: 
+        "logo call trigger"
+        "number number number"
+        "avatar avatar avatar"
+        "navbar navbar navbar"
+        ;
+        justify-items: center;
+        align-items: start;
+        justify-content: space-between;
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+        z-index: 999;
+
+        .headerLogoWrap {
+            padding: 1rem;
+        }
+
+        &.headerOpen {
+            height: 100%;
+            transition: height 0.5s ease;
+        }
+        &.headerClose {
+            height: 0;
+            transition: height 0.5s ease;
+
+        }
+    }
+
+    .hidden {
+        display: none!important;
+        visibility: hidden;
+    }
+
+    .headerLogoWrap {
+        grid-area: logo;
+    }
+
+    .callMeBackWrap {
+        grid-area: call;
+    }
+
+
+    .headerNav {
+        grid-area: navbar;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+        gap: 3.6875rem;
+    }
+    .number {
+        grid-area: number;
+    }
+    .avatarDropDownWrap {
+        grid-area: avatar;
+        
+        .dropDownWrap {
+            right: -55%;
+            &::after {
+                left: 0;
+                right: 0;
+                margin: auto;
+            }
+        }
+    }
+
+    .headerTrigger {
+        $scaleFactor: 1.667;
+        grid-area: trigger;
+        display: flex;
+        align-items: center;
+        border-radius: 50%;
+        background: colors.$primary-titan-white;
+        padding: 1rem;
+        gap: 0.25rem;
+        cursor: pointer;
+        opacity: 1!important;
+        & * {
+            transition: all 0.5s ease;
+            transform-origin: center;
+            transform-box: fill-box;
+        }
+        &.triggerClose {
+            .line1 {
+                stroke-width: calc(1.333/$scaleFactor);
+                transform:
+                scale($scaleFactor) 
+                translate(calc(-2.0px/$scaleFactor), calc(4.667px/$scaleFactor))
+                rotate(45deg);
+            }
+            .line2 {
+                transform: translateX(20px);
+            }
+            .line3 {
+                stroke-width: calc(1.333/$scaleFactor);
+                transform:
+                scale($scaleFactor)
+                    translate(0, calc(-4.667px/$scaleFactor))
+                    rotate(-45deg)
+                ;
+            }
+        }
+    }
+    
+}
+
+@media (min-width: 1200px) {
+    
+    .headerWrap {
+        display: flex;
+        align-items: center;
+        gap: 5rem;
+        flex: 1 0 0;
+
+        .headerLogoWrap {
+            padding: 1.25rem;
+
+            .headerLogo {
+                width: 2.5rem;
+                height: 2.5rem;
+            }
+        }
+    }
+    .headerTrigger {
+        display: none;
+    }
+
+    .headerNav {
+        align-items: flex-start;
+        gap: 3.6875rem;
+        // flex: 1 0 0;
+    }
+
+    .dropDownWrap {
+        min-width: 11.0625rem;
+        right: 0;
+
+        &::after {
+            left: 80%;
+        }
+    }
 }
 
 .headerLogoWrap {
     display: flex;
-    padding: 1.25rem;
     justify-content: center;
     align-items: center;
-    border-radius: 6.1875rem;
+    border-radius: 50%;
     background: colors.$primary-titan-white;
+    cursor: pointer;
 
     .headerLogo {
         display: flex;
-        width: 2.5rem;
-        height: 2.5rem;
         justify-content: center;
         align-items: center;
     }
@@ -27,8 +168,6 @@
 
 .headerNav {
     display: flex;
-    align-items: flex-start;
-    gap: 3.6875rem;
     flex: 1 0 0;
     
     
@@ -68,13 +207,6 @@
     }
 }
 
-.headerLeft {
-    display: flex;
-    padding: 0.6875rem 0rem;
-    align-items: center;
-    gap: 3.75rem;
-}
-
 .callMeBackWrap {
     display: flex;
     justify-content: center;
@@ -102,6 +234,13 @@
     }
 }
 
+.headerLeft {
+    display: flex;
+    padding: 0.6875rem 0rem;
+    align-items: center;
+    gap: 3.75rem;
+
+}
 .number {
     @include mixins.fontStyle(colors.$primary-black, 1rem, normal, 600, 1.25rem);
 }
@@ -115,7 +254,7 @@
         padding: 0.875rem;
         flex-direction: column;
         align-items: flex-start;
-        border-radius: 6.1875rem;
+        border-radius: 50%;
         background: colors.$primary-titan-white;
         
 
@@ -147,10 +286,8 @@
         background: colors.$primary-white;
         border-radius: 0.7rem;
         box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 14px 0px;
-        min-width: 11.0625rem;
         white-space: nowrap;
         position: absolute;
-        right: 0;
         margin-top: 0.7rem;
         transition: opacity 0.3s, visibility 0.2s ease;
 
@@ -199,7 +336,6 @@
 
         &::after {
             position: absolute;
-            left: 80%;
             top: -0.5rem;
             width: 0;
             height: 0;
