--- a/MYBfrontend/src/pages/Layout/Layout.module.scss
+++ b/MYBfrontend/src/pages/Layout/Layout.module.scss
@@ -1,10 +1,25 @@
+@media (max-width: 1200px) {
+    .App {
+        margin: 0 1.5rem;
+    }
+    .main {
+        margin-top: 3rem;
+        align-items: center;
+    }
+}
+
+@media (min-width: 1201px) {
+    .App {
+        margin: 0 8rem;
+    }
+}
+
 
 .App {
     display: flex;
     flex-direction: column;
     position: relative;
-    margin: 0 8rem;
-    min-height: 100vh;
+    min-height: 100%;
     flex: 1 0 0;
 }
 
@@ -16,9 +31,11 @@
     display: flex;
     flex-direction: column;
     flex: 1 0 0;
+    // height: 100%;
 }
 
 .footer {
     padding: 0 0 2rem 0;
     margin-top: auto;
+    flex-wrap: wrap;
 }
