--- a/MYBfrontend/src/pages/MainPage/MainPage.module.scss
+++ b/MYBfrontend/src/pages/MainPage/MainPage.module.scss
@@ -1,5 +1,172 @@
+@use '../../scss/colors' as colors;
+@use '../../scss/mixins.module' as mixins;
+
 .mainPageWrap {
     display: flex;
+    flex-direction: column;
     position: relative;
-    flex: 1;
+    flex: 1 0 0;
+
+    .topPart {
+        display: flex;
+        align-items: center;
+        flex: 2 0 0;
+        gap: 15%;
+
+        .MYBnameWrap {
+            flex: 1 0 0;
+        }
+
+        .burgerWrap {
+            display: flex;
+            flex: 3 0 0;
+            height: 100%;
+            gap: 2.56rem;
+            .burger {
+                flex: 1 0 0;
+                background-image: url('../../../public/burgerBackground2.png');
+                background-repeat: no-repeat;
+                background-size: contain;
+                min-width: 25rem;
+            
+            }
+
+            .summaryWrap {
+                align-self: center;
+                flex: 1 0 0;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 1.5rem;
+
+                .summaryHeader {
+                    @include mixins.fontStyle(colors.$primary-black, 2.25rem, normal, 600, normal);
+                }
+                .divider {
+                    height: 0.125rem;
+                    align-self: stretch;
+                    border-radius: 6.1875rem;
+                    background: colors.$primary-titan-white;
+                }
+
+                .priceWrap {
+                    display: flex;
+                    align-items: center;
+                    gap: 1rem;
+                    align-self: stretch;
+                    .price {
+                        flex: 1 0 0;
+                        user-select: none;
+                        @include mixins.fontStyle(colors.$primary-primary, 2.25rem, normal, 800, normal);
+                    }
+                    .checkout {
+                        flex: 1 0 0;
+                        display: flex;
+                        width: 100%;
+                        padding: 1rem 0;
+                        justify-content: center;
+                        align-items: center;
+                        border-radius: 6.1875rem;
+                        background: colors.$primary-primary;
+                        @include mixins.fontStyle(colors.$primary-titan-white, 1rem, normal, 600,  1.25rem);
+                        user-select: none;
+                        cursor: pointer;
+                    }
+                }
+                .giftText {
+                    align-self: stretch;
+                    @include mixins.fontStyle(colors.$primary-black, 0.875rem, normal, 400, 1.25rem);
+                    .giftPrice {
+                        @include mixins.fontStyle(colors.$primary-danger, 0.875rem, normal, 600, 1.25rem);
+                    }
+                }
+                .summaryCounterWrap {
+                    display: flex;
+                    padding: 1rem;
+                    justify-content: center;
+                    align-items: center;
+                    align-self: stretch;
+                    border-radius: 2rem;
+                    background: colors.$primary-titan-white;
+                    .summaryCounter {
+                        display: flex;
+                        align-items: center;
+                        gap: 0.5rem;
+                        flex: 1 0 0;
+                        border-radius: 3.125rem;
+                        user-select: none;
+                        @include mixins.fontStyle(colors.$primary-black, 0.875rem, normal, 600, 1.25rem);
+                    }
+                }
+            }
+        }
+    }
+
+    .ingredientsWrap {
+        display: flex;
+        flex: 1 0 0;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 2rem;
+
+        .ingredientWrap {
+            display: flex;
+            padding: 1.5rem 1.125rem;
+            align-items: flex-start;
+            gap: 0.625rem;
+            border-radius: 2rem;
+            border: 1px solid colors.$primary-black-squeeze;
+            background: colors.$primary-white;
+
+            .ingredient {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 0.75rem;
+                flex: 1 0 0;
+                .ingredientImage {
+                    display: flex;
+                    padding: 0.43069rem 0rem;
+                    justify-content: center;
+                    align-items: center;
+                    flex-shrink: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-size: cover; 
+                    background-repeat: no-repeat;
+                    background-position: center;
+                }
+                .ingredientName {
+                    @include mixins.fontStyle(colors.$primary-black, 0.875rem, normal, 600, 1.25rem);
+                }
+                .counterWrap {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    align-self: stretch;
+                    .counterButton {
+                        display: flex;
+                        align-items: center;
+                        border-radius: 50%;
+                        background: colors.$primary-titan-white;
+                        // padding: 0.175rem;
+                        cursor: pointer;
+
+                    }
+                    .counterNumber {
+                        display: flex;
+                        height: 100%;
+                        padding: 0.5rem;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        gap: 0.625rem;
+                        flex: 1 0 0;
+                        user-select: none;
+                    }
+                }
+
+            }
+        }
+    }
 }
