--- a/MYBfrontend/src/scss/index.scss
+++ b/MYBfrontend/src/scss/index.scss
@@ -2,8 +2,9 @@
 #root {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100%;
     // min-width: 320px;
+
 }
 
 :root {
@@ -14,4 +15,5 @@
 
 html, body{
     margin: 0;
+    height: 100%;
 }
